--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-paper": "^4.12.1",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
